# test

./: CODEOWNERS  README.md  content  pyproject.toml
.github/scripts/: request_review.py
.github/workflows/: ci.yml  reviewers.yml
src/test/: hello.py
src/test/bye/: bye.py
