[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "trag1c", email = "dev@jakubr.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test = "test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
