[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "trag1c", email = "dev@jakubr.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test = "test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "githubkit>=0.12.9",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
select = ["I"]
